# vald-sample-rust-client

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  build_error.md
proto/: README.md
proto/payload/: payload.proto
proto/vald/: filter.proto  insert.proto  object.proto  remove.proto  search.proto  update.proto  upsert.proto
src/: client.rs  lib.rs
src/proto/: google.api.rs  payload.v1.rs  vald.v1.rs
