[package]
name = "vald-sample-rust-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.6.2"
tokio = "1.15"
prost = "0.9"
prost-types = "0.9"

[build-dependencies]
tonic-build = "0.6.2"
