[package]
name = "vald-sample-rust-client"
version = "1.7.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.6.2"
tokio = "1.15"
prost = "0.9"
prost-types = "0.9"
hdf5 = "0.8.1"
chrono = "^0.4"

[build-dependencies]
tonic-build = "0.6.2"
